crates/codegen/language/tests/src/fail/definitions/duplicate_expression_name/test.stderr
error: An expression with the name 'Expression1' already exists.
  --> src/fail/definitions/duplicate_expression_name/test.rs:18:49
   |
18 |                     PrecedenceExpression(name = Expression1, operators = [])
   |                                                 ^^^^^^^^^^^
